[project]
name = "gigachat"
version = "0.2.0b2"
description = "GigaChat. Python-library for GigaChat API"
authors = [
    { name = "Konstantin Krestnikov", email = "rai220@gmail.com" },
    { name = "Sergey Malyshev", email = "in1t@ya.ru" },
]
requires-python = ">=3.8,<4"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "httpx>=0.24,<1",
]

[project.urls]
Repository = "https://github.com/ai-forever/gigachat"

[dependency-groups]
dev = [
    "mypy>=1.8.0",
    "pytest>=7.4.3",
    "pytest-httpx<=0.22.0 ; python_version < '3.9'",
    "pytest-httpx>=0.26.0,<0.27 ; python_version >= '3.9'",
    "pytest-asyncio>=0.21.1",
    "coverage>=7.0.0",
    "ruff>=0.8.0",
    "pre-commit>=3.5.0",
    "pytest-cov>=5.0.0",
    "vcrpy>=6.0.0",
    "pytest-recording>=0.13.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.sdist]
include = ["src/gigachat"]

[tool.hatch.build.targets.wheel]
include = ["src/gigachat"]

[tool.hatch.build.targets.wheel.sources]
"src/gigachat" = "gigachat"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
src = ["src"]
target-version = "py38"
exclude = ["htmlcov", "*.ipynb"]

[tool.ruff.lint]
select = [
    "A",
    "B",
    "C4",
    "C90",
    "D401",
    "E",
    "F",
    "I",
    "PERF",
    "PT",
    "Q",
    "RUF100",
    "S",
    "UP",
    "W",
]
ignore = ["S311"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S107"]

[tool.ruff.lint.isort]
known-first-party = ["gigachat"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
plugins = "pydantic.mypy"
strict = true

[tool.pytest.ini_options]
pythonpath = ["src", "."]
xfail_strict = true
asyncio_mode = "auto"
markers = ["integration: mark a test as an integration test."]
addopts = "-m 'not integration'"

[tool.coverage.run]
branch = true
source = ["src/gigachat"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if .*TYPE_CHECKING:",
    "@.*overload",
    "assert_never",
]
